Moved path parsing and reading options from conf in new options object

--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "chai": "*"
   },
   "dependencies": {
-    "underscore" : "*",
-    "node.packer": "*",
-    "commander"  : "*"
+    "node.packer" : "*",
+    "commander"   : "*",
+    "evento"      : "*",
+    "informer"    : "*"
   },
   "bin": {
     "compressor-g4": "./bin/compressor.js"
